fix in computation time output
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@41116 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@
 #
 # Copyright (C) 2008 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.5.5 (build 10. August 2009)
+- fix in computation time output for normalize.quantil
+- some very simple improvements
+
 affyPara 1.5.4 (build 23. June 2009)
 - vignette update
 
