--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@
 #
 # Copyright (C) 2008 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.5.11 (build 14. August 2009)
+- several documentation fixes (broken links)
+
 affyPara 1.5.5 (build 10. August 2009)
 - fix in computation time output for normalize.quantil
 - some very simple improvements
